--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "hover-marquee": "^1.1.0",
+    "lodash": "^4.17.21",
+    "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-fast-marquee": "^1.6.5",
+    "react-marquee-slider": "^1.1.5",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "postcss": "^8",
